force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Days_Since_Payment__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_Since_Payment__c</fullName>
    <formula>IF(ISNULL(animalos__Last_Payment_Date__c), TODAY() - DATEVALUE(CreatedDate), TODAY() - animalos__Last_Payment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>