force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Discount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>