force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Discount_Amount__c</fullName>
    <formula>animalos__Invoice_Line_Item_Discount_Amount__c + (animalos__Total_Amount__c *  animalos__Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>