force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>