force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Invoice_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>animalos__Invoice_Line_Item_Count__c</fullName>
    <label>Invoice Line Item Count</label>
    <summaryForeignKey>animalos__Invoice_Line_Item__c.animalos__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>