force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Invoice_Line_Item_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Invoice_Line_Item_Discount_Amount__c</fullName>
    <label>Invoice Line Item Discount Amount</label>
    <summarizedField>animalos__Invoice_Line_Item__c.animalos__Discount_Amount__c</summarizedField>
    <summaryForeignKey>animalos__Invoice_Line_Item__c.animalos__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>