force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Last_Payment_Date__c</fullName>
    <label>Last Payment Date</label>
    <summarizedField>animalos__Payment__c.animalos__Payment_Date__c</summarizedField>
    <summaryFilterItems>
        <field>animalos__Payment__c.animalos__Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>animalos__Payment__c.animalos__Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>