force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Net_Amount__c</fullName>
    <formula>animalos__Total_Amount__c - (animalos__Total_Amount__c * animalos__Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>