force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Payment_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>animalos__Payment_Amount_Received__c</fullName>
    <label>Payment Amount Received</label>
    <summarizedField>animalos__Payment__c.animalos__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>animalos__Payment__c.animalos__Payment_Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>animalos__Payment__c.animalos__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>