force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>animalos__Remaining_Balance__c</fullName>
    <formula>animalos__Net_Amount__c - NULLVALUE(animalos__Payment_Amount_Received__c, 0) - NULLVALUE(animalos__Amount_Written_Off__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>