force-app/main/default/objects/animalos__Invoice__c/fields/animalos__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>animalos__Invoice_Line_Item__c.animalos__Total_Price__c</summarizedField>
    <summaryForeignKey>animalos__Invoice_Line_Item__c.animalos__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>