force-app/main/default/objects/animalos__Invoice__c/listViews/animalos__All_Invoices.listView-meta.xml
<ListView>
    <fullName>animalos__All_Invoices</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>